Chapter 5 - Security Security settings. Wire TacoOrder and User.